# aria-rwa-dapp

./: .env.example  .gitignore  README.md
aria-backend/: Dockerfile  app.py  requirements.txt
aria-frontend/: index.html  package-lock.json  package.json  vite.config.js
aria-frontend/src/: App.jsx  constants.js  index.css  main.jsx  theme.js
aria-frontend/src/components/: AIReportCard.jsx  AnalysisReport.jsx  FileUpload.jsx  Header.jsx  LiveWorkflowVisualizer.jsx  Navbar.jsx  NftActions.jsx  NftCard.jsx  NftGallery.jsx  PayloadViewer.jsx  StakingDashboard.jsx
aria-frontend/src/pages/: GovernancePage.jsx  HomePage.jsx  MarketplacePage.jsx  StakingPage.jsx
verified-rwa-contract/: Cargo.toml  NOTICE
verified-rwa-contract/src/: contract.rs  error.rs  msg.rs  state.rs
