[package]
name = "verified-rwa-contract"
version = "0.1.0"
authors = ["nihal"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.1
"""

[dependencies]
cosmwasm-std = { version = "1.5.11" }
cosmwasm-schema = { version = "1.5.11" }
cw-storage-plus = { version = "1.2.0" }
cw2 = { version = "1.1.2" }
schemars = { version = "0.8.22", features = ["derive"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.69" }

base64ct = "=1.6.0"

andromeda-std = { version = "1.0.0" }
andromeda-non-fungible-tokens = { version = "1.0.0" }




[dev-dependencies]
cw-multi-test = { version = "1.0.0" }
